# C_algo

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
algorithms/custom_math/: custom_math.c  custom_math.h  custom_math_test.cpp
data_structures/binary_heap/: binary_heap.cpp  binary_heap.h  binary_heap_test.cpp
data_structures/bit_array/: README.md  bit_array.c  bit_array.h  bit_array_test.cpp
data_structures/bloom_filter/: README.md  bloom_filter.c  bloom_filter.h  bloom_filter_test.cpp
data_structures/dynamic_array/: README.md  dynamic_array.h  dynamic_array_test.cpp
data_structures/hash_table/: README.md  hash_table.c  hash_table.h  hash_table_test.cpp
data_structures/linked_list/: int_linked_list_test.cpp  linked_list.c  linked_list.h  linked_list_test.cpp
dynamic_array/: dynamic_array.c  dynamic_array.h  dynamic_array_test.cpp  int_dynamic_array.c  int_dynamic_array.h  int_dynamic_array_test.cpp
linked_list/: int_linked_list.c  int_linked_list.h  int_linked_list_test.cpp
test/: CMakeLists.txt  main.cpp
